# erftools

./: .gitignore  README.md  pyproject.toml  setup.py
erftools/: HSE.py  erfparms.py  grids.py  input_sounding.py  inputdata.py  inputs.py  parms.py  plotting.py  preprocessing.py  utils.py
erftools/data/: hrrr_v4_grid.npz  ozone_CAM.nc
erftools/hindcast/: __init__.py  base.py  config.py  era5.py  gfs.py
erftools/io/: __init__.py  binary.py  simple.py  vtk.py
erftools/postprocessing/: __init__.py  pltfiles.py  profiles.py  surface.py
erftools/preprocessing/: __init__.py  gfs.py  gribdata.py  hrrr.py  interpolation.py  nwpdata.py  plotting.py  preprocessing.py  real.py  wrf_inputs.py
erftools/preprocessing/_gfs/: Download_GFSData.py  IO.py  ReadGFSDataAndWriteERF_IC.py
erftools/preprocessing/era5/: Download_ERA5Data.py  IO.py  ReadERA5DataAndWriteERF_IC.py  ReadERA5DataAndWriteERF_SurfBC.py
erftools/preprocessing/gfs/: Download_GFSData.py  IO.py  ReadGFSDataAndWriteERF_IC.py  ReadGFSDataAndWriteERF_IC_FourCastNetGFS.py  ReadGFSDataAndWriteERF_IC_OnlyUVW.py
erftools/utils/: EOS.py  __init__.py  diag.py  latlon.py  map.py  mapproj.py  microphysics.py  omega.py  projection.py  wrf.py  xarray.py
erftools/wrappers/: __init__.py  column.py  scm.py  wrapper.py
erftools/wrf/: __init__.py  inputdeck.py  landuse.py  namelist.py  namelist_mappings.py  rad.py  real.py  tslist.py
erftools/wrf/namelist/: input.py  mappings.py  tslist.py
notebooks/: generate_inputs_from_hrrr.ipynb  read_CAM_ozone_data.ipynb
notebooks/era5/: README.md  WriteICFromERA5Data.py  WriteNOAAForecastCone.py  WriteUSMapLambertProj.py
notebooks/gfs/: README.md  WriteICFromGFSData.py
tests/: test_hindcast.py
